# sportech

./: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  heroku.yml  main.go  main.py  migrate  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: sportech-ci.yaml  teams-ci.yaml
commons/go/configutil/: main.go
config/: config.go  config.py  config.yml
database/: database.go  migrate.go
football/: app.py
football/routers/: hello_world.py  subapp.py
leagues/: endpoint.go  http.go  models.go  repository.go  repository_test.go  service.go
managers/: endpoint.go  http.go  models.go  repository.go  repository_test.go  service.go
middleware/: middleware.go
migrations/: 000002_base_data.down.sql  000002_base_data.up.sql
persons/: models.go  repository.go  service.go
platform/: Makefile  docker-compose.yml
platform/commons/go/logging/: main.go
platform/postgres/: entrypoint.sh
platform/team-service/: .dockerignore  .env  Dockerfile  Makefile  main.go  main_test.go
platform/team-service/config/: config.go  config.yml
platform/team-service/team/: service.go
players/: endpoint.go  http.go  models.go  repository.go  repository_test.go  service.go
postgres/: create_databases.sh  docker-compose.yml  entrypoint.sh
stadiums/: endpoint.go  http.go  models.go  repository.go  repository_test.go  service.go
team/: endpoint.go  http.go  models.go  repository.go
teams/: endpoint.go  http.go  models.go  repository.go  repository_test.go  service.go
(+1 files in other folders)
